small tweak/fix for overflow on faces

--- a/durandal02/css/themes/mocks.css
+++ b/durandal02/css/themes/mocks.css
@@ -3456,8 +3456,7 @@ background:transparent url(../images/tutorial/control_left.jpg) no-repeat 0 0;
     width: 224px;
     height: 40px;
     display: inline-block;
-    overflow-x: scroll;
-    overflow-y: hidden;
+    overflow: hidden;
     vertical-align: bottom;
 }
 
